fix grid overflow

--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -49,6 +49,7 @@
     grid-column-gap: 10px;
     grid-row-gap: 0;
     max-width: 100%;
+    overflow: hidden;
   }
 
   .col-3,
